fixed z-index of navbar

--- a/src/stylesheets/Nav.css
+++ b/src/stylesheets/Nav.css
@@ -30,6 +30,7 @@ nav {
   user-select: none;
   transform: translate3d(25px, -25px, 0);
   transition: transform 0.5s cubic-bezier(0.3, 1.4, 0.5, 0.9);
+  z-index:1
 }
 
 .circular-menu .link {
